--- a/visual-similarity-pipe-dev.ipynb
+++ b/visual-similarity-pipe-dev.ipynb
@@ -35,12 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "id": "b057566d-8350-42c4-8bfa-b106af2fd06f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ![title](img/pipeline-v1.png)"
+    "# ![End-to-End Vertex Pipeline](https://github.com/tottenjordan/retail-visual-similarity/blob/master/img/pipeline-v1.png?raw=true)"
    ]
   },
   {
