--- a/retail-dataset-prep.ipynb
+++ b/retail-dataset-prep.ipynb
@@ -369,6 +369,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "467850f0-528d-4813-91d3-7de109a1a00a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def read_and_decode_v2(filename, reshape_dims=[IMG_HEIGHT, IMG_WIDTH]):\n",
+    "#   # Read the file\n",
+    "#   img = tf.io.read_file(filename)\n",
+    "  \n",
+    "#   # Convert the compressed string to a 3D uint8 tensor.\n",
+    "#   img = tf.image.decode_jpeg(img, channels=IMG_CHANNELS)\n",
+    "  \n",
+    "#   # Use `convert_image_dtype` to convert to floats in the [0,1] range.\n",
+    "#   # This makes the img 1 x 224 x 224 x 3 tensor with the data type of float32\n",
+    "#   img = tf.image.convert_image_dtype(img, tf.float32)\n",
+    "  \n",
+    "#   # Resize the image to the desired size.\n",
+    "#   return tf.image.resize(img, reshape_dims)\n",
+    "\n",
+    "# f, ax = plt.subplots(len(query_filenames), NUM_NEIGH + 1,\n",
+    "#                      figsize=(5 * (1 + NUM_NEIGH), 5 * len(query_filenames)))\n",
+    "# for rowno, query_filename in enumerate(query_filenames):\n",
+    "#   ax[rowno][0].imshow(read_and_decode_v2(query_filename).numpy())\n",
+    "#   ax[rowno][0].axis('off')\n",
+    "#   for colno, neigh in enumerate(neighbors[rowno]):\n",
+    "#     ax[rowno][colno+1].imshow(read_and_decode_v2(dataset_filenames[neigh]).numpy())\n",
+    "#     ax[rowno][colno+1].set_title('dist={:.1f}'.format(distances[rowno][colno].numpy()))\n",
+    "#     ax[rowno][colno+1].axis('off')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0fc63126-02a7-4ded-b4bb-2862cf709a90",
    "metadata": {},
