filter example fin

--- a/retail-dataset-prep.ipynb
+++ b/retail-dataset-prep.ipynb
@@ -27,15 +27,7 @@
    "execution_count": 1,
    "id": "518e7329-1efa-4c1f-83f8-d5a6628c7d51",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated property [core/project].\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# PROJECT_ID = 'hybrid-vertex'  # <--- TODO: CHANGE THIS\n",
     "# LOCATION = 'us-central1' \n",
@@ -76,13 +68,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: REMOVE THESE once complete\n",
-    "# ! pip3 install $USER kfp google-cloud-pipeline-components --upgrade\n",
-    "# !git clone https://github.com/kubeflow/pipelines.git\n",
-    "# !pip install pipelines/components/google-cloud/.\n",
-    "# !pip install google-cloud-aiplatform==1.10.0\n",
-    "# !pip install scann\n",
-    "\n",
     "# KEEP: packages needed\n",
     "!pip install -U google-cloud-aiplatform $USER_FLAG\n",
     "!pip3 install -U google-cloud-storage $USER_FLAG\n",
@@ -96,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "15c1c127-2ec1-4f93-8cfc-eba5c59dea62",
    "metadata": {},
    "outputs": [
@@ -123,7 +108,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Updated property [core/project].\n"
+      "Updated property [core/project].\n",
+      "\n",
+      "\n",
+      "To take a quick anonymous survey, run:\n",
+      "  $ gcloud survey\n",
+      "\n"
      ]
     }
    ],
@@ -143,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "f487c90d-1bd9-478b-b7d9-f70eac3e20dd",
    "metadata": {},
    "outputs": [],
@@ -180,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "94133367-512a-4ffb-ad58-cd722341adfc",
    "metadata": {},
    "outputs": [],
@@ -223,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "da975389-e458-4806-b0cd-59b3bc0c0395",
    "metadata": {},
    "outputs": [
@@ -304,20 +294,20 @@
        "4  JACQUARD TEXTILE COLORS FABRIC PAINT - These e...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "CSV_URI = 'gs://retail-products-kaggle/data-full/test.csv'\n",
-    "test_csv = pd.read_csv(CSV_URI)\n",
+    "test_CSV_URI = 'gs://retail-products-kaggle/data-full/test.csv'\n",
+    "test_csv = pd.read_csv(test_CSV_URI)\n",
     "test_csv.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "5ffbd281-9974-4fe0-9ad6-f4f111651149",
    "metadata": {},
    "outputs": [
@@ -411,7 +401,7 @@
        "4     Health & Personal Care  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "de62e60e-0eca-4dfe-8d4d-d3e975419e3a",
    "metadata": {},
    "outputs": [
@@ -475,7 +465,7 @@
        "7326  Dismayed by the silence around your dinner tab...  Toys & Games  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +478,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
+   "id": "743128ec-1f5e-447e-8704-d8161edc651f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ids = train_csv['ImgId']\n",
+    "# cats = train_csv['categories']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "fe71603d-fca5-48b2-8cd3-4587b7f7d5dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'7326    Toys & Games\\nName: categories, dtype: object'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat = train_csv.loc[train_csv['ImgId'].str.contains(IMAGE_ID, case=False)]['categories']\n",
+    "str(cat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "48c777bb-7ee6-4b06-bbdd-72cf11745766",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Toys & Games'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat = train_csv.loc[train_csv['ImgId'] == IMAGE_ID, 'categories'].item()\n",
+    "cat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "c7f2ebf6-8cfb-478c-b6d8-9e713f07f621",
    "metadata": {},
    "outputs": [
@@ -519,7 +564,7 @@
        "Name: categories, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "b30b0c7e-b75b-44de-88e8-0fc008254fde",
    "metadata": {},
    "outputs": [],
@@ -595,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "135c40e9-9cee-4037-93fe-5ba71079e5f2",
    "metadata": {},
    "outputs": [
@@ -767,18 +812,18 @@
    "outputs": [],
    "source": [
     "def read_and_decode(filename, reshape_dims=[IMG_HEIGHT, IMG_WIDTH]):\n",
-    "  # Read the file\n",
-    "  img = tf.io.read_file(filename)\n",
+    "    # Read the file\n",
+    "    img = tf.io.read_file(filename)\n",
     "  \n",
-    "  # Convert the compressed string to a 3D uint8 tensor.\n",
-    "  img = tf.image.decode_jpeg(img, channels=IMG_CHANNELS)\n",
+    "    # Convert the compressed string to a 3D uint8 tensor.\n",
+    "    img = tf.image.decode_jpeg(img, channels=IMG_CHANNELS)\n",
     "  \n",
-    "  # Use `convert_image_dtype` to convert to floats in the [0,1] range.\n",
-    "  # This makes the img 1 x 224 x 224 x 3 tensor with the data type of float32\n",
-    "  img = tf.image.convert_image_dtype(img, tf.float32)[tf.newaxis, ...]\n",
+    "    # Use `convert_image_dtype` to convert to floats in the [0,1] range.\n",
+    "    # This makes the img 1 x 224 x 224 x 3 tensor with the data type of float32\n",
+    "    img = tf.image.convert_image_dtype(img, tf.float32)[tf.newaxis, ...]\n",
     "  \n",
-    "  # Resize the image to the desired size.\n",
-    "  return tf.image.resize(img, reshape_dims)"
+    "    # Resize the image to the desired size.\n",
+    "    return tf.image.resize(img, reshape_dims)"
    ]
   },
   {
